# home_api

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  cmake_targets  t1  t2
_db/: ingredients_1.json
include/api/: api.hpp
include/constraint/: constraint.hpp
include/db/: db.hpp
include/http/: forward.hpp  headers.hpp  headers_parser.hpp  parser.hpp  parsor.hpp  query_parser.hpp  request.hpp  request_line_parser.hpp  request_parser.hpp  response.hpp  status_line_parser.hpp
include/local/: cmake_vars.h.in  config.h.in  request.hpp  response.hpp  route-map.hpp  route_map.hpp  socket-concept.hpp  socket.hpp  util.hpp  utils.hpp
include/local/unix/: socket.hpp
include/local/windows/: socket.hpp
include/routes/: index.hpp  ingredients.hpp
include/server/: server.hpp
include/tables/: concepts.hpp  definitions.hpp  utils.hpp
include/util/: base64.hpp  file.hpp  http.hpp  json.hpp  log.hpp
install/: CMakeLists.txt  config.h.in  install.cpp
install/migrations/: 0.sql  1.sql  2.sql  3.sql  4.sql
lib/sql/: CMakeLists.txt  json_string_result.cpp  sqlite3.cpp  statement.cpp  status.cpp
lib/sql/include/sql/: concepts.hpp  forward.hpp  json_string_result.hpp  sqlite3.hpp  statement.hpp  status.hpp
migrations/: 1.sql  2.sql  3.sql  4.sql  5.sql  6.sql  7.sql
src/: headers_parser.cpp  main.cpp  request.cpp  request_line_parser.cpp  request_parser.cpp  response.cpp  route-map.cpp  route_map.cpp  socket.cpp  status_line_parser.cpp  utils.cpp
src/db/: db.cpp
src/http/: headers_parser.cpp  parser.cpp  parsor.cpp  query_parser.cpp  request_parser.cpp  status_line_parser.cpp
src/local/: util.cpp
src/routes/: index.cpp  ingredients.cpp
src/server/: server.cpp
src/tables/: definitions.cpp  utils.cpp
src/unix/: socket.cpp
src/util/: base64.cpp  file.cpp  http.cpp  json.cpp  log.cpp
src/windows/: socket.cpp
tests/: headers_parser.cpp  main.cpp  parsor.cpp  request_parser.cpp  status_line_parser.cpp
tests/db/: db.cpp  migration.cpp
tests/http/: headers_parser.cpp  parser.cpp  query_parser.cpp  request_parser.cpp  status_line_parser.cpp
tests/local/: util.cpp
tests/resources/db/: app_test.db  test.db
